[package]
name = "imxrt1052"
version = "0.1.0"
authors = ["Yurii Rashkovskii <me@yrashk.com>"]
keywords = ["svd2rust"]
repository = "https://github.com/yrashk/imxrt1052"

[dependencies]
bare-metal = "0.1"
vcell = "0.1"
cortex-m = "0.5.4"

[dependencies.cortex-m-rt]
version = "0.5.3"
optional = true


[features]
default = []
rt = ["cortex-m-rt/device"]
