[package]
name = "imxrt1052"
version = "0.1.0"
authors = ["Yurii Rashkovskii <me@yrashk.com>"]
keywords = ["svd2rust"]
repository = "https://github.com/yrashk/imxrt1052"

[dependencies]
bare-metal = "0.2"
vcell = "0.1"
cortex-m = "0.5.7"
cfg-if = "0.1"

[dependencies.cortex-m-rt]
version = "0.6.3"
optional = true


[features]
ccm = []
ccm_analog = []
gpio1 = []
iomuxc = []
iomuxc_gpr = []
dcdc = []
enet = []
wdog = []
xtalosc24m = []

default = []
everything = []
rt = ["cortex-m-rt/device"]
